--- a/carrello.html
+++ b/carrello.html
@@ -13,11 +13,15 @@
     <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 <body>
-    <!-- Clean Modern Header -->
+    <!-- Enhanced Modern Header -->
     <header class="modern-header">
         <div class="header-container">
             <a href="index.html" class="logo-container">
-                <img src="img/logo.png" alt="MoodBites Logo" class="logo-img">
+                <div class="logo-icon">
+                    <div class="logo-shape">
+                        <i class="fas fa-cookie-bite"></i>
+                    </div>
+                </div>
                 <div class="logo-text">
                     <h1>MoodBites</h1>
                     <p>Uno snack per ogni capriccio!</p>
@@ -157,10 +161,10 @@
                 <div class="footer-links">
                     <h4>Categorie</h4>
                     <ul>
-                        <li><a href="prodotti.html">Snack Salati</a></li>
-                        <li><a href="prodotti.html">Snack Dolci</a></li>
-                        <li><a href="prodotti.html">Bevande</a></li>
-                        <li><a href="prodotti.html">Healthy</a></li>
+                        <li><a href="prodotti.html?category=snack-salati">Snack Salati</a></li>
+                        <li><a href="prodotti.html?category=snack-dolci">Snack Dolci</a></li>
+                        <li><a href="prodotti.html?category=bevande">Bevande</a></li>
+                        <li><a href="prodotti.html?category=healthy">Healthy</a></li>
                     </ul>
                 </div>
                 
