--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 <body>
-        <!-- Clean Modern Header -->
+        <!-- Enhanced Modern Header -->
     <header class="modern-header">
         <div class="header-container">
             <a href="index.html" class="logo-container">
-                <img src="img/logo.png" alt="MoodBites Logo" class="logo-img">
+                <div class="logo-icon">
+                    <div class="logo-shape">
+                        <i class="fas fa-cookie-bite"></i>
+                    </div>
+                </div>
                 <div class="logo-text">
                     <h1>MoodBites</h1>
                     <p>Uno snack per ogni capriccio!</p>
@@ -86,34 +90,24 @@
                     <img src="img/dolci.jpg" alt="Snack dolci">
                     <h3>Dolci</h3>
                     <p>Barrette energetiche, biscotti e dolciumi per i momenti di piacere e consolazione</p>
+                    <a href="prodotti.html?category=snack-dolci" class="btn-small">Vedi prodotti</a>
                 </div>
                 <div class="category-card hover-lift fade-in">
                     <img src="img/salati.jpg" alt="Snack salati">
                     <h3>Salati</h3>
                     <p>Crackers, patatine e snack salati per soddisfare ogni voglia di sapore intenso</p>
+                    <a href="prodotti.html?category=snack-salati" class="btn-small">Vedi prodotti</a>
                 </div>
                 <div class="category-card hover-lift fade-in">
                     <img src="img/sani.jpg" alt="Snack sani">
                     <h3>Snack Sani</h3>
                     <p>Mix di frutta secca e semi per un'alimentazione equilibrata e gustosa</p>
+                    <a href="prodotti.html?category=healthy" class="btn-small">Vedi prodotti</a>
                 </div>
             </div>
         </div>
     </section>
-                <a href="prodotti.html" class="btn-small">Vedi prodotti</a>
-            </div>
-            <div class="category-card">
-                <img src="img/salati.jpg" alt="Snack salati">
-                <h3>Salati</h3>
-                <a href="prodotti2.html" class="btn-small">Vedi prodotti</a>
-            </div>
-            <div class="category-card">
-                <img src="img/sani.jpg" alt="Snack sani">
-                <h3>Snack sani</h3>
-                <a href="prodotti3.html" class="btn-small">Vedi prodotti</a>
-            </div>
-        </div>
-    </section>
+              
 
     <!-- Prodotti in evidenza -->
     <section class="featured">
@@ -181,10 +175,10 @@
                 <div class="footer-links">
                     <h4>Categorie</h4>
                     <ul>
-                        <li><a href="prodotti.html">Snack Salati</a></li>
-                        <li><a href="prodotti.html">Snack Dolci</a></li>
-                        <li><a href="prodotti.html">Bevande</a></li>
-                        <li><a href="prodotti.html">Healthy</a></li>
+                        <li><a href="prodotti.html?category=snack-salati">Snack Salati</a></li>
+                        <li><a href="prodotti.html?category=snack-dolci">Snack Dolci</a></li>
+                        <li><a href="prodotti.html?category=bevande">Bevande</a></li>
+                        <li><a href="prodotti.html?category=healthy">Healthy</a></li>
                     </ul>
                 </div>
                 
