--- a/index.html
+++ b/index.html
@@ -112,25 +112,8 @@
     <!-- Prodotti in evidenza -->
     <section class="featured">
         <h2>I nostri bestseller</h2>
-        <div class="product-grid">
-            <div class="product-card">
-                <img src="img/prodotto1.jpg" alt="Patatine piccanti">
-                <h3>Patatine Piccanti</h3>
-                <p class="price">€1.99</p>
-                <button class="btn-small">Aggiungi al carrello</button>
-            </div>
-            <div class="product-card">
-                <img src="img/prodotto2.jpg" alt="Barretta cioccolato">
-                <h3>Barretta Cioccolato</h3>
-                <p class="price">€1.49</p>
-                <button class="btn-small">Aggiungi al carrello</button>
-            </div>
-            <div class="product-card">
-                <img src="img/prodotto3.jpg" alt="Mix frutta secca">
-                <h3>Mix Frutta Secca</h3>
-                <p class="price">€2.99</p>
-                <button class="btn-small">Aggiungi al carrello</button>
-            </div>
+        <div class="product-grid" id="featured-products">
+            <!-- Products will be loaded dynamically -->
         </div>
     </section>
 
