refactor cart and about pages for improved UI and functionality

--- a/carrello.html
+++ b/carrello.html
@@ -87,7 +87,7 @@
                         <i class="fas fa-shopping-cart" style="font-size: 4rem; color: var(--text-light); margin-bottom: 1rem;"></i>
                         <h3>Il tuo carrello è vuoto</h3>
                         <p class="text-secondary mb-medium">Aggiungi alcuni snack per iniziare!</p>
-                        <a href="prodotti.html" class="btn">
+                        <a href="prodotti.html" class="btn btn-large">
                             <i class="fas fa-arrow-left"></i>
                             Continua lo shopping
                         </a>
@@ -116,11 +116,11 @@
                     </div>
                     
                     <div class="cart-actions">
-                        <button class="btn btn-outline" id="clear-cart">
+                        <button class="btn btn-outline text-primary" id="clear-cart">
                             <i class="fas fa-trash"></i>
                             Svuota carrello
                         </button>
-                        <a href="contatti.html" class="btn btn-large">
+                        <a href="index.html" class="btn btn-large">
                             <i class="fas fa-credit-card"></i>
                             Procedi al checkout
                         </a>
